--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,10 @@ dependencies {
     implementation "org.camunda.bpm:camunda-engine:7.11.0"
     implementation "com.h2database:h2:1.4.199"
 
+    // camunda spin json
     implementation "org.camunda.bpm:camunda-engine-plugin-spin:7.11.0"
     implementation "org.camunda.spin:camunda-spin-core:1.6.7"
-    implementation "com.jayway.jsonpath:json-path:2.4.0"
+    implementation "org.camunda.spin:camunda-spin-dataformat-json-jackson:1.6.7"
 }
 
 compileKotlin {
