--- a/build.gradle
+++ b/build.gradle
@@ -11,18 +11,18 @@ repositories {
 
 dependencies {
     compile 'io.javalin:javalin:3.1.0'
-    implementation 'org.slf4j:slf4j-simple:1.7.26'
+    compile 'org.slf4j:slf4j-simple:1.7.26'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9'
 
-    implementation "org.camunda.bpm:camunda-engine:7.11.0"
-    implementation "com.h2database:h2:1.4.199"
+    compile "org.camunda.bpm:camunda-engine:7.11.0"
+    compile "com.h2database:h2:1.4.199"
 
     // camunda spin json
-    implementation "org.camunda.bpm:camunda-engine-plugin-spin:7.11.0"
-    implementation "org.camunda.spin:camunda-spin-core:1.6.7"
-    implementation "org.camunda.spin:camunda-spin-dataformat-json-jackson:1.6.7"
+    compile "org.camunda.bpm:camunda-engine-plugin-spin:7.11.0"
+    compile "org.camunda.spin:camunda-spin-core:1.6.7"
+    compile "org.camunda.spin:camunda-spin-dataformat-json-jackson:1.6.7"
 }
 
 compileKotlin {
@@ -34,10 +34,9 @@ compileTestKotlin {
 
 jar {
     manifest {
-        attributes "Main-Class": "org.rootbr.BpmnApplication"
+        attributes 'Main-Class': 'org.rootbr.BpmnApplicationKt'
     }
-
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    from { 
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } 
     }
 }
