--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ dependencies {
     compile "org.camunda.bpm:camunda-engine-plugin-spin:7.11.0"
     compile "org.camunda.spin:camunda-spin-core:1.6.7"
     compile "org.camunda.spin:camunda-spin-dataformat-json-jackson:1.6.7"
+
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.4.2')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    testCompile 'org.assertj:assertj-core:3.9.1'
+    testCompile 'org.mockito:mockito-core:2.27.0'
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'org.mockito:junit-jupiter:2.20.0'
 }
 
 compileKotlin {
