--- a/src/main/javascript/package.json
+++ b/src/main/javascript/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-bootstrap4-table": "^1.1.9",
     "vue-bpmn": "^0.2.0",
+    "vue-native-websocket": "^2.0.13",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
