--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version "0.1-SNAPSHOT"
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -16,6 +17,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9'
 
+
     compile "org.camunda.bpm:camunda-engine:7.11.0"
     compile "com.h2database:h2:1.4.199"
 
@@ -23,6 +25,9 @@ dependencies {
     compile "org.camunda.bpm:camunda-engine-plugin-spin:7.11.0"
     compile "org.camunda.spin:camunda-spin-core:1.6.7"
     compile "org.camunda.spin:camunda-spin-dataformat-json-jackson:1.6.7"
+
+    testCompile 'khttp:khttp:1.0.0'
+    testCompile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M2'
 
     testCompile('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testCompile('org.junit.jupiter:junit-jupiter-params:5.4.2')
@@ -44,7 +49,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'org.rootbr.BpmnApplicationKt'
     }
-    from { 
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } 
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
