--- a/src/main/javascript/package.json
+++ b/src/main/javascript/package.json
@@ -15,6 +15,7 @@
     "vue-bootstrap4-table": "^1.1.9",
     "vue-bpmn": "^0.2.0",
     "vue-native-websocket": "^2.0.13",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
